[package]
name = "leptonrs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Gui
iced = "0.13.1"

# Crypto
xts-mode = "0.5.1"
aes = "0.8.4"
aes-gcm = "0.10.3"

sha3 = "0.10.8"

pqcrypto-mlkem = "0.1.1"
pqcrypto-mldsa = "0.1.2"
pqcrypto-traits = "0.3.5"

argon2 = "0.5.3"

cipher = "0.4.4"

# Memory management
libc = "0.2.176"

# Randomness
rand = "0.9.2"
rand_core = "0.9.3"

# Encoding
hex = "0.4.3"
base64 = "0.22.1"
bs58 = "0.5.1"

# Other
generic-array = "1.2.0"
thiserror = "2.0.16"
